Ajout de la redirection vers accueil.html après la connexion / et vers connexion.html après la creation d'un compte + commentaire du code

--- a/accueil.html
+++ b/accueil.html
@@ -21,7 +21,7 @@
                 <li><a href="project.html">Projects</a></li>
                 <li><a href="actualites.html">Actuality</a></li>
                 <li><a href="conseils.html">Advices</a></li>
-                <li><a href="connection.html">Connection</a></li> <!-- Nouveau lien ajouté ici -->
+                <li><a href="connection.html">Connexion</a></li> <!-- nouveau lien ajouté ici -->
             </ul>
         </nav>
     </header>
