--- a/connection.html
+++ b/connection.html
@@ -42,7 +42,7 @@
                 alert(`Erreur : ${errorData.message}`);
               } else {
                 const result = await response.json();
-                alert(result.message);
+                //alert(result.message);
                 
                 window.location.href = 'accueil.html';// redirec vers accueil.html
               }
