Ajout de la fonctionnalité panier

--- a/cat2.html
+++ b/cat2.html
@@ -23,7 +23,7 @@
                 <li><a href="actualites.html">Actuality</a></li>
                 <li><a href="conseils.html">Advices</a></li>
                 <li class="cart">
-                    <a href="panier.html">
+                    <a href="panier.html"> <!-- c'est fakepanier pour l'instant-->
                         <i class='bx bx-cart'></i>
                     </a>
                 </li>
@@ -43,7 +43,10 @@
                 <img src="taille.webp" alt="Article 2">
                 <h2>Article 2</h2>
                 <p>Description de l'article 2.</p>
-                <a href="article2.html" class="read-more">Lire plus</a>
+                <!-- Pour les test j'ai mis a1c2 dès maintenant
+                <a href="article2.html" class="read-more">Lire plus</a>-->
+                <a href="a1c2.html" class="read-more">Lire plus</a>
+
             </div>
             <div class="article">
                 <img src="taille2.webp" alt="Article 3">
