--- a/project.html
+++ b/project.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galerie - Anciens Chantiers</title>
+    <title>Gallery - Past Projects</title>
     <link rel="stylesheet" href="project.css">
 </head>
 <body>
 
-    <!-- En-tête -->
+    <!-- Header -->
     <header>
         <div class="logo">
             <img src="logo.png" alt="Logo">
@@ -20,117 +20,117 @@
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="project.html">Project</a></li>
                 <li><a href="actualites.html">Actuality</a></li>
-                <li><a href="conseils.html">Advices</a></li>
+                <li><a href="conseils.html">Advice</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- Barre de filtrage -->
+    <!-- Filter Bar -->
     <section class="filter-bar">
-        <label for="filter-date">Filtrer par date:</label>
+        <label for="filter-date">Filter by Date:</label>
         <select id="filter-date">
-            <option value="all">Toutes les dates</option>
+            <option value="all">All Dates</option>
             <option value="2024">2024</option>
             <option value="2023">2023</option>
             <option value="2022">2022</option>
         </select>
 
-        <label for="filter-price">Filtrer par prix:</label>
+        <label for="filter-price">Filter by Price:</label>
         <select id="filter-price">
-            <option value="all">Tous les prix</option>
-            <option value="low">Moins de 1000€</option>
+            <option value="all">All Prices</option>
+            <option value="low">Under 1000€</option>
             <option value="medium">1000€ - 5000€</option>
-            <option value="high">Plus de 5000€</option>
+            <option value="high">Over 5000€</option>
         </select>
 
-        <label for="filter-type">Filtrer par type:</label>
+        <label for="filter-type">Filter by Type:</label>
         <select id="filter-type">
-            <option value="all">Tous les types</option>
-            <option value="elagage">Élagage</option>
-            <option value="abattage">Abattage</option>
-            <option value="soin">Soin des arbres</option>
-            <option value="amenagement">Aménagement</option>
+            <option value="all">All Types</option>
+            <option value="elagage">Pruning</option>
+            <option value="abattage">Tree Felling</option>
+            <option value="soin">Tree Care</option>
+            <option value="amenagement">Landscaping</option>
         </select>
     </section>
 
-    <!-- Contenu de la galerie -->
+    <!-- Gallery Content -->
     <main>
         <section class="gallery-container">
-            <h1>Galerie des Anciens Chantiers</h1>
-            <p>Découvrez nos projets précédents en matière d'élagage, d'entretien des arbres, et d'aménagement d'espaces verts.</p>
+            <h1>Past Projects Gallery</h1>
+            <p>Explore our previous projects in tree pruning, care, and landscaping of green spaces.</p>
             <div class="gallery-grid">
-                <!-- Chantier 1 -->
+                <!-- Project 1 -->
                 <div class="gallery-item" data-type="elagage" data-date="2024" data-price="medium">
-                    <img src="c1.webp" alt="Chantier 1">
+                    <img src="c1.webp" alt="Project 1">
                     <div class="gallery-info">
-                        <h2>Élagage d'arbres matures en parc public</h2>
+                        <h2>Pruning of Mature Trees in a Public Park</h2>
                     </div>
                 </div>
 
-                <!-- Chantier 2 -->
+                <!-- Project 2 -->
                 <div class="gallery-item" data-type="soin" data-date="2023" data-price="low">
-                    <img src="c2.webp" alt="Chantier 2">
+                    <img src="c2.webp" alt="Project 2">
                     <div class="gallery-info">
-                        <h2>Taille de formation pour jeunes arbres</h2>
+                        <h2>Formative Pruning for Young Trees</h2>
                     </div>
                 </div>
 
-                <!-- Chantier 3 -->
+                <!-- Project 3 -->
                 <div class="gallery-item" data-type="abattage" data-date="2022" data-price="high">
-                    <img src="c3.webp" alt="Chantier 3">
+                    <img src="c3.webp" alt="Project 3">
                     <div class="gallery-info">
-                        <h2>Abattage sécurisé en zone urbaine</h2>
+                        <h2>Safe Tree Felling in Urban Area</h2>
                     </div>
                 </div>
 
-                <!-- Chantier 4 -->
+                <!-- Project 4 -->
                 <div class="gallery-item" data-type="elagage" data-date="2024" data-price="medium">
-                    <img src="c4.webp" alt="Chantier 4">
+                    <img src="c4.webp" alt="Project 4">
                     <div class="gallery-info">
-                        <h2>Nettoyage et éclaircissage de cimes</h2>
+                        <h2>Cleaning and Thinning of Tree Crowns</h2>
                     </div>
                 </div>
 
-                <!-- Chantier 5 -->
+                <!-- Project 5 -->
                 <div class="gallery-item" data-type="elagage" data-date="2023" data-price="low">
-                    <img src="c5.webp" alt="Chantier 5">
+                    <img src="c5.webp" alt="Project 5">
                     <div class="gallery-info">
-                        <h2>Réduction de hauteur d'arbres pour sécurité</h2>
+                        <h2>Height Reduction for Safety</h2>
                     </div>
                 </div>
 
-                <!-- Chantier 6 -->
+                <!-- Project 6 -->
                 <div class="gallery-item" data-type="soin" data-date="2022" data-price="medium">
-                    <img src="fruit.webp" alt="Chantier 6">
+                    <img src="fruit.webp" alt="Project 6">
                     <div class="gallery-info">
-                        <h2>Élagage et soin d'arbres fruitiers</h2>
+                        <h2>Pruning and Care of Fruit Trees</h2>
                     </div>
                 </div>
 
-                <!-- Chantier 7 -->
+                <!-- Project 7 -->
                 <div class="gallery-item" data-type="amenagement" data-date="2024" data-price="high">
-                    <img src="jardin.webp" alt="Chantier 7">
+                    <img src="jardin.webp" alt="Project 7">
                     <div class="gallery-info">
-                        <h2>Aménagement d'un espace vert privé</h2>
+                        <h2>Private Green Space Landscaping</h2>
                     </div>
                 </div>
 
-                <!-- Chantier 8 -->
+                <!-- Project 8 -->
                 <div class="gallery-item" data-type="abattage" data-date="2023" data-price="high">
-                    <img src="c6.webp" alt="Chantier 8">
+                    <img src="c6.webp" alt="Project 8">
                     <div class="gallery-info">
-                        <h2>Abattage d'un arbre dangereux</h2>
+                        <h2>Tree Felling of a Hazardous Tree</h2>
                     </div>
                 </div>
             </div>
         </section>
     </main>
 
-    <!-- Pied de page -->
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 L'Arbre Envie. Tous droits réservés.</p>
+        <p>&copy; 2024 L'Arbre En Vie. All rights reserved.</p>
     </footer>
 
-    <script src="filtre.js"></script>
+    <script src="filter.js"></script>
 </body>
 </html>
