--- a/conseils.html
+++ b/conseils.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
-<html lang="fr">
- 
+<!DOCTYPE html> 
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ajouter un Arbre</title>
+    <title>Add a Tree</title>
     <link rel="stylesheet" href="conseils.css">
 </head>
- 
+
 <body>
- 
-    <!-- En-tête (identique à la page d'accueil) -->
+
+    <!-- Header (identical to the home page) -->
     <header>
         <div class="logo">
             <img src="logo.png" alt="Logo">
@@ -26,79 +26,77 @@
             </ul>
         </nav>
     </header>
- 
-    <!-- Section principale avec le formulaire -->
+
+    <!-- Main section with the form -->
     <main>
         <div class="form-header">
-            <h2>Quand tailler votre arbre</h2>
+            <h2>When to Prune Your Tree</h2>
         </div>
         <div class="form-container">
             <form id="taille-form" action="javascript:void(0);">
                 <div class="form-group">
-                    <label for="categorie">Catégorie d'arbre :</label>
-                    <input type="text" id="categorie" name="categorie" placeholder="Ex : Conifère" required>
+                    <label for="categorie">Tree Category:</label>
+                    <input type="text" id="categorie" name="categorie" placeholder="E.g.: Conifer" required>
                 </div>
- 
+
                 <div class="form-group">
-                    <label for="nom">Nom de l'arbre :</label>
-                    <input type="text" id="nom" name="nom" placeholder="Ex : Pin sylvestre" required>
+                    <label for="nom">Tree Name:</label>
+                    <input type="text" id="nom" name="nom" placeholder="E.g.: Scots Pine" required>
                 </div>
- 
+
                 <div class="form-group">
-                    <label for="climat">Climat :</label>
-                    <input type="text" id="climat" name="climat" placeholder="Ex : Tempéré" required>
+                    <label for="climat">Climate:</label>
+                    <input type="text" id="climat" name="climat" placeholder="E.g.: Temperate" required>
                 </div>
- 
+
                 <div class="form-group">
-                    <label for="date-taille">Dernière taille :</label>
+                    <label for="date-taille">Last Pruning:</label>
                     <input type="date" id="date-taille" name="date-taille" required>
                 </div>
- 
-                <button type="submit">Rechercher</button>
+
+                <button type="submit">Search</button>
             </form>
-            <!-- Résultat de la recommandation -->
+            <!-- Recommendation result -->
             <div id="result" class="result"></div>
         </div>
     </main>
- 
-    <!-- Pied de page -->
+
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 L'Arbre En Vie - Tous droits réservés</p>
+        <p>&copy; 2024 L'Arbre En Vie - All rights reserved</p>
     </footer>
- 
-    <!-- Script JavaScript pour le traitement -->
+
+    <!-- JavaScript for processing -->
     <script>
         document.getElementById('taille-form').addEventListener('submit', function () {
-            // Récupération des valeurs du formulaire
-            const climat = document.getElementById('climat').value.toLowerCase();
-            const dateTaille = new Date(document.getElementById('date-taille').value);
+            // Retrieve form values
+            const climate = document.getElementById('climat').value.toLowerCase();
+            const lastPruningDate = new Date(document.getElementById('date-taille').value);
             const result = document.getElementById('result');
- 
-            // Calcul de la prochaine période de taille en fonction du climat
-            let moisRecommande;
-            if (climat.includes('tempéré')) {
-                moisRecommande = "entre fin hiver et début printemps";
-            } else if (climat.includes('méditerranéen')) {
-                moisRecommande = "au début de l'automne";
-            } else if (climat.includes('tropical')) {
-                moisRecommande = "juste avant la saison des pluies";
+
+            // Calculate recommended pruning period based on climate
+            let recommendedMonth;
+            if (climate.includes('temperate')) {
+                recommendedMonth = "between late winter and early spring";
+            } else if (climate.includes('mediterranean')) {
+                recommendedMonth = "at the beginning of autumn";
+            } else if (climate.includes('tropical')) {
+                recommendedMonth = "just before the rainy season";
             } else {
-                moisRecommande = "selon les conditions locales";
+                recommendedMonth = "according to local conditions";
             }
- 
-            // Calcul de la prochaine taille en fonction de la dernière date
-            const prochaineTaille = new Date(dateTaille);
-            prochaineTaille.setFullYear(prochaineTaille.getFullYear() + 1);
+
+            // Calculate the next pruning based on the last date
+            const nextPruningDate = new Date(lastPruningDate);
+            nextPruningDate.setFullYear(nextPruningDate.getFullYear() + 1);
             const options = { year: 'numeric', month: 'long', day: 'numeric' };
-            const dateRecommandee = prochaineTaille.toLocaleDateString('fr-FR', options);
- 
-            // Affichage du résultat
-            result.innerHTML = `<p>Il est recommandé de tailler votre arbre ${moisRecommande}. La prochaine taille pourrait être prévue aux alentours du ${dateRecommandee}.</p>`;
+            const recommendedDate = nextPruningDate.toLocaleDateString('en-EN', options);
+
+            // Display result
+            result.innerHTML = `<p>It is recommended to prune your tree ${recommendedMonth}. The next pruning could be scheduled around ${recommendedDate}.</p>`;
         });
     </script>
- 
+
 </body>
- 
+
 </html>
- 
- 
