--- a/accueil.html
+++ b/accueil.html
@@ -22,6 +22,7 @@
                 <li><a href="actualites.html">Actuality</a></li>
                 <li><a href="conseils.html">Advices</a></li>
                 <li><a href="connection.html">Connexion</a></li> <!-- nouveau lien ajouté ici -->
+                <li><a href="admin.html">Admin</a></li>
             </ul>
         </nav>
     </header>
