--- a/accueil.html
+++ b/accueil.html
@@ -21,8 +21,9 @@
                 <li><a href="project.html">Projects</a></li>
                 <li><a href="actualites.html">Actuality</a></li>
                 <li><a href="conseils.html">Advices</a></li>
-                <li><a href="connection.html">Connexion</a></li> <!-- nouveau lien ajouté ici -->
-                <li><a href="admin.html">Admin</a></li>
+                <!-- on mettra panier.html plus tard-->
+                <li><a href="fakepanier.html">Mon panier</a></li> 
+                <li><a href="connection.html">Connexion</a></li>
             </ul>
         </nav>
     </header>
