createproducts-w\URL-des+affichage-et-supp-products

--- a/admin.html
+++ b/admin.html
@@ -42,14 +42,21 @@
 
        <div class="menu-grid">
 
-           <a href="manage-products.html" class="menu-item">
+           <a href="create-products.html" class="menu-item">
 
                <img src="products-icon.png" alt="Products">
 
-               <h3>Manage Products</h3>
+               <h3>Create Products</h3>
 
            </a>
 
+           <a href="aff-supp.html" class="menu-item">
+
+            <img src="products-icon.png" alt="Products">
+
+            <h3>Aff et supp</h3>
+
+        </a>
            <a href="manage-news.html" class="menu-item">
 
                <img src="news-icon.png" alt="News">
