modif-admin+shop+category+filter

--- a/admin.html
+++ b/admin.html
@@ -54,7 +54,7 @@
 
             <img src="products-icon.png" alt="Products">
 
-            <h3>Aff et supp</h3>
+            <h3>Manage Products</h3>
 
         </a>
            <a href="manage-news.html" class="menu-item">
