--- a/create-products.html
+++ b/create-products.html
@@ -13,13 +13,17 @@
     <input type="text" id="name" required>
 
     <label for="price">Prix :</label>
-    <input type="number" id="price" required>
+    <!-- Ajout de l'attribut step pour permettre les décimales -->
+    <input type="number" id="price" step="0.01" required>
 
     <label for="description">Description :</label>
     <textarea id="description" required></textarea>
 
     <label for="image_url">URL de l'image :</label>
     <input type="text" id="image_url" required>
+
+    <label for="category">Choisir la catégorie :</label>
+    <input type="number" id="category" required>
 
     <button type="submit">Ajouter le produit</button>
 </form>
@@ -29,15 +33,26 @@
         e.preventDefault();
 
         const name = document.getElementById('name').value;
-        const price = document.getElementById('price').value;
+        let price = document.getElementById('price').value;
         const description = document.getElementById('description').value;
         const image_url = document.getElementById('image_url').value;
+        const category = document.getElementById('category').value;
+
+        // Validation du prix pour s'assurer qu'il est un nombre avec deux décimales
+        price = parseFloat(price);
+        if (isNaN(price) || price < 0) {
+            alert('Veuillez entrer un prix valide.');
+            return;
+        }
+
+        // Formatage du prix avec deux décimales (pour éviter les erreurs de calcul)
+        price = price.toFixed(2); 
 
         try {
             const response = await fetch('http://localhost:3000/api/products', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ name, price, description, image_url })
+                body: JSON.stringify({ name, price, description, image_url, category })
             });
 
             if (!response.ok) {
