--- a/produit.html
+++ b/produit.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="produit.css">
 </head>
 
+<!-- code pour insérer les produits dynamiquement en fct de leur id / voir api-->
 <body>
 
-    <!-- En-tête -->
     <header>
         <div class="logo">
             <img src="logo.png" alt="Logo">
@@ -29,7 +29,7 @@
         </nav>
     </header>
 
-    <!-- Page Produit -->
+    <!-- page produit -->
     <main class="product-page">
         <section class="product-info">
             <div class="product-image">
@@ -53,7 +53,6 @@
         </section>
     </main>
 
-    <!-- Pied de page -->
     <footer>
         <p>&copy; 2024 L'Arbre En Vie - Tous droits réservés</p>
     </footer>
@@ -62,7 +61,7 @@
         const urlParams = new URLSearchParams(window.location.search);
         const productId = urlParams.get('id');
 
-        // Fetch product details based on the product ID
+        // fetch product en fct du product ID
         fetch(`http://localhost:3000/api/products/${productId}`)
             .then(response => response.json())
             .then(product => {
@@ -78,7 +77,7 @@
                     characteristicsList.appendChild(li);
                 });
 
-                // Show reviews
+                // Show reviews - voir plus tard pour la DB feedback
                 const reviewsContainer = document.getElementById('reviews');
                 product.reviews.forEach(review => {
                     const reviewElement = document.createElement('div');
@@ -94,7 +93,7 @@
                 console.error('Erreur lors de la récupération du produit:', error);
             });
 
-        // Ajouter au panier (localStorage)
+        // ajouter au panier ( le localStorage)
         function addToCart() {
             const productName = document.getElementById('product-name').textContent;
             const productPrice = parseFloat(document.getElementById('product-price').textContent.replace('€', '').trim());
@@ -108,7 +107,7 @@
             let cart = JSON.parse(localStorage.getItem('cart')) || [];
             const existingProduct = cart.find(item => item.name === product.name);
             if (existingProduct) {
-                existingProduct.quantity += 1;
+                existingProduct.quantity += 1; // pour ajouter +1 un produit s'il existe deja
             } else {
                 cart.push(product);
             }
