maj des routes, manage orderV1(manque date recup commande client)

--- a/admin.html
+++ b/admin.html
@@ -54,10 +54,10 @@
                 <h3>Manage Orders</h3>
             </a>
             
-            <a href="manage-news.html" class="menu-item">
+            <!-- <a href="manage-news.html" class="menu-item">
                 <img src="news-icon.png" alt="News">
                 <h3>Manage News</h3>
-            </a>
+            </a> -->
         </div>
     </main>
 
