--- a/manage-orders.html
+++ b/manage-orders.html
@@ -1,123 +1,131 @@
 <!DOCTYPE html>
-
 <html lang="fr">
 
 <head>
-
    <meta charset="UTF-8">
-
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
    <title>Manage Orders</title>
-
    <link rel="stylesheet" href="manage-order.css">
-
 </head>
 
 <body>
-
-
-   <header>
-
+   <header> <!-- penser à changer les headers pour qu'ils soient tous les mêmes-->
        <h1>Manage Orders</h1>
-
        <nav>
-
            <ul class="nav-menu">
-
                <li><a href="admin.html">Dashboard</a></li>
-
                <li><a href="logout.html">Logout</a></li>
-
            </ul>
-
        </nav>
-
    </header>
 
-
    <main>
-
-       <section class="admin-section">
-
-           <h2>Order Management</h2>
-
-           <button onclick="toggleVisibility('order-list')" class="toggle-button">Show Orders</button>
-
-           <div id="order-list" class="toggle-content">
-
-               <!-- Order Example -->
-
-               <div class="admin-item">
-
-                   <h3>Order #001</h3>
-
-                   <p>Customer: John Doe</p>
-
-                   <p>Product: Garden Pruning Shears</p>
-
-                   <p>Status: <span class="order-status">Not Prepared</span></p>
-
-                   <div class="order-actions">
-
-                       <button onclick="updateOrderStatus('Order #001', 'Being Prepared')">Mark as Being Prepared</button>
-
-                       <button onclick="updateOrderStatus('Order #001', 'Ready for Pickup')">Mark as Ready for Pickup</button>
-
-                       <button onclick="updateOrderStatus('Order #001', 'Delivered')">Mark as Delivered</button>
-
-                       <button onclick="cancelOrder('Order #001')">Cancel Order</button>
-
-                       <button onclick="viewOrderDetails('Order #001')">View Details</button>
-
-                   </div>
-
-               </div>
-
-               <!-- Add More Orders Here -->
-
-               <div class="admin-item">
-
-                   <h3>Order #002</h3>
-
-                   <p>Customer: Jane Smith</p>
-
-                   <p>Product: Organic Fertilizer</p>
-
-                   <p>Status: <span class="order-status">Being Prepared</span></p>
-
-                   <div class="order-actions">
-
-                       <button onclick="updateOrderStatus('Order #002', 'Ready for Pickup')">Mark as Ready for Pickup</button>
-
-                       <button onclick="updateOrderStatus('Order #002', 'Delivered')">Mark as Delivered</button>
-
-                       <button onclick="cancelOrder('Order #002')">Cancel Order</button>
-
-                       <button onclick="viewOrderDetails('Order #002')">View Details</button>
-
-                   </div>
-
-               </div>
-
-           </div>
-
-       </section>
-
+    <section class="admin-section">
+        <h2>Order Management</h2>
+        <div class="filter-section">
+            <label for="order-filter">Sort Orders By:</label>
+            <select id="order-filter" onchange="filterOrders()">
+                <option value="created_at_desc">Newest First</option>
+                <option value="created_at_asc">Oldest First</option>
+                <option value="total_price_asc">Lowest Price</option>
+                <option value="total_price_desc">Highest Price</option>
+            </select>
+            <button onclick="toggleVisibility('order-list')" class="toggle-button">Show Orders</button>
+        </div>
+        <div id="order-list" class="toggle-content">
+            <!-- le contenu des commandes s'afficheici -->
+        </div>
+    </section>
+    
    </main>
 
-
    <footer>
-
        <p>&copy; 2024 L'Arbre En Vie - All Rights Reserved</p>
-
    </footer>
 
+   <script>
+    // fct pour recup et afficher les commandes avec tri
+    async function fetchSortedOrders(sort = 'created_at_desc') {
+        try {
+            const response = await fetch(`http://localhost:3000/api/orders?sort=${sort}`);
+            if (!response.ok) throw new Error('Erreur lors de la récupération des commandes.');
+            const orders = await response.json();
 
-   <script src="admin.js"></script>
+            displayOrders(orders);
+        } catch (error) {
+            console.error('Erreur dans fetchSortedOrders:', error);
+        }
+    }
 
+    function displayOrders(orders) { // aff les commandes dans la liste
+        const orderList = document.getElementById('order-list');
+        orderList.innerHTML = ''; // vider le contenu précédent
+
+        if (orders.length === 0) {
+            orderList.innerHTML = '<p>Aucune commande trouvée.</p>';
+            return;
+        }
+
+        orders.forEach(order => {
+            const orderItem = document.createElement('div');
+            orderItem.classList.add('admin-item');
+            const cartItems = order.cart_items; 
+
+            orderItem.innerHTML = `
+                <h3>Order #${order.order_id}</h3>
+                <p>Customer: ${order.username}</p>
+                <p>Customer ID: ${order.user_id}</p>
+                <p>Total Price: €${order.total_price.toFixed(2)}</p>
+                <p>Order Date: ${new Date(order.created_at).toLocaleString()}</p>
+                <p>Products:</p>
+                <ul>
+                    ${cartItems.map(item => `<li>${item.name} - €${item.price.toFixed(2)} x ${item.quantity}</li>`).join('')}
+                </ul>
+                <div class="order-actions">
+                    <button onclick="updateOrderStatus(${order.order_id}, 'Being Prepared')">Mark as Being Prepared</button>
+                    <button onclick="updateOrderStatus(${order.order_id}, 'Ready for Pickup')">Mark as Ready for Pickup</button>
+                    <button onclick="updateOrderStatus(${order.order_id}, 'Delivered')">Mark as Delivered</button>
+                    <button onclick="cancelOrder(${order.order_id})">Cancel Order</button>
+                </div>
+            `;
+            orderList.appendChild(orderItem);
+        });
+    }
+
+    // fonction pour changer de filtre
+    function filterOrders() {
+        const filter = document.getElementById('order-filter').value;
+        console.log(`Applying filter: ${filter}`); // Debug
+        fetchSortedOrders(filter); // Récupérer et afficher les commandes triées
+    }
+
+
+///////////////////////////////////////////////////////////////////////////////////////////////
+// en attente du calendrier et front paiement final pour ajuster les menus dans manage order //
+///////////////////////////////////////////////////////////////////////////////////////////////
+
+    function updateOrderStatus(orderId, status) {
+        console.log(`Updating order #${orderId} to status: ${status}`);
+    }
+
+    function cancelOrder(orderId) {
+        console.log(`Cancelling order #${orderId}`);
+    }
+
+    // charger les commandes triés par défaut à l'ouverture de la page
+    window.addEventListener('DOMContentLoaded', () => {
+        fetchSortedOrders('created_at_desc'); // Tri par défaut
+    });
+
+    function toggleVisibility(elementId) { // gestion du show order
+        const element = document.getElementById(elementId);
+        if (element.style.display === 'none' || element.style.display === '') {
+            element.style.display = 'block';
+        } else {
+            element.style.display = 'none';
+        }
+    }
+   </script>
 </body>
 
 </html>
-
-
